Add basic dependencies